[tool.poetry]
name = "webwork3"
version = "0.1.0"
description = ""
authors = ["ruslanum <86016842+ruslanum@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
docker = "^5.0.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
